<resources>
    <string name="app_name">SpinderTec</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="btn_login">Accesar</string>
    <string name="btn_register">Crear cuenta</string>
    <string name="btn_link_to_register">No tienes tu cuenta? Comienza a jugar.</string>
    <string name="btn_link_to_login">Ya estás registrado! Accesar.</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_logout">Salir</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="title_activity_profile_sport_information">ProfileSportInformation</string>
    <string name="btn_iniciarPartida">Jugar</string>
    <string name="btn_back">Back</string>
    <string name="btn_checkReservations">Encuentros</string>
    <string name="txt_Status">Status request</string>
    <string name="txt_FriendsStatus">Status request</string>
    <string name="title_activity_searchfriends">Search Friends</string>
    <string name="title_activity_addfriends">Add Friends</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pop_friends_or_random">PopFriendsOrRandom</string>
    <string name="title_activity_reservations">Reservations</string>
    <string name="title_activity_random_request_reservation">RandomRequestReservation</string>
    <string name="btn_search_ad_friend">Añadir amigos</string>
    <string name="title_ganesHistorial">Historial</string>
    <string name="btn_history">Historial</string>
    <string name="user_home_name">Jonh Doe</string>
    <string name="user_home_email">myawesomemail@itesm.mx</string>
    <string name="select_a_friend">Selecciona a tus amigos</string>
    <string name="hint_search_name">Buscar por nombre ...</string>
    <string name="btn_search_ad_new_friend">Buscar</string>
</resources>
