<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/home_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="24dp"
            android:text="Alitzel Méndez"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout" />

        <TextView
            android:id="@+id/home_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="alichel_6288@hotmail.com" />

        <!-- Link to Login Screen -->
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_BeginPartida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_iniciarPartida"
                android:padding="20dp"
                android:textColor="@color/white"
                android:layout_margin="16dp"
                />

            <Button
                android:id="@+id/btn_History"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content"
                android:text="@string/btn_checkReservations"
                android:textAllCaps="false"
                android:padding="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_history"
                android:id="@+id/btn_CheckReservations"
                android:padding="20dp"
                android:gravity="center"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:background="@color/input_register_bg" />


            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:background="@color/colorGreyLight"
                android:text="@string/btn_logout"
                android:padding="20dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
